--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"redux-immutable": "^4.0.0",
 		"redux-thunk": "^2.4.2",
 		"styled-components": "^5.3.6",
+		"swiper": "^8.4.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
