feat: modify api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"cSpell.words": ["commitlint", "iconfont", "swiper", "TTFB"],
+	"cSpell.words": ["commitlint", "iconfont", "lazyload", "swiper", "TTFB"],
 	"editor.formatOnSave": true,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"[javascript]": {
