--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
           persist-credentials: false
       - name: Install and Build
         run: |
-          npm install
+          npm ci
           npm build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.2
