chore: github page for react-lazyload

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
 		"iconfont",
 		"lazyload",
 		"swiper",
-		"TTFB"
+		"TTFB",
+		"twobin"
 	],
 	"editor.formatOnSave": true,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
