--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-lazyload": "^3.2.0",
+		"react-lazyload": "github:twobin/react-lazyload",
 		"react-redux": "^8.0.5",
 		"react-router": "^5.3.4",
 		"react-router-config": "^5.1.1",
