--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install and Build
         run: |
           npm ci
-          npm run build
+          npm run build:github
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.2
         with:
