--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"redux-thunk": "^2.4.2",
 		"styled-components": "^5.3.6",
 		"swiper": "^8.4.5",
+		"vconsole": "^3.15.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
