--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
 	"printWidth": 80,
 	"tabWidth": 2,
-	"useTabs": true,
+	"useTabs": false,
 	"singleQuote": true,
 	"semi": true,
-	"trailingComma": "none",
+	"trailingComma": "es5",
 	"bracketSpacing": true,
 	"endOfLine": "auto"
 }
