--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.5.1",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
