--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@better-scroll/core": "^2.5.1",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
