--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.1"
   },
@@ -26,6 +27,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-lazy-load-image-component": "^1.6.1",
+    "@types/react-transition-group": "^4.4.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
