--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
+    "create-keyframe-animation": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
@@ -24,6 +25,7 @@
     "swiper": "^10.3.1"
   },
   "devDependencies": {
+    "@types/create-keyframe-animation": "^0.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-lazy-load-image-component": "^1.6.1",
