--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
           - macos-latest
           - windows-latest
     steps:
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.8.0
       - name: Checkout
         uses: actions/checkout@v4
         with:
