--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,21 +6,15 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version:
-          - 18.x
-        pnpm:
-          - 8.8.0
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
     steps:
-      - uses: pnpm/action-setup@v2
+      - name: Set env
+        uses: pnpm/action-setup@v2
         with:
           version: 8.8.0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'pnpm'
       - name: Checkout
         uses: actions/checkout@v4
         with:
