--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.16.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.0.8",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "vconsole": "^3.15.1"
   },
   "devDependencies": {
     "@types/create-keyframe-animation": "^0.1.1",
